# dwifte.py

./: .env  .gitignore  README.md  app.json  clear_heroku_files.sh  config.json  config.py  main.py  nitro-logs.txt  pyinstaller.py  pyproject.toml  repl.py  requirements.txt  up  update.json  update.sh
cogs/: ImgTools.py  fun.py  general.py  help.py  joke.py  random.py  spam.py
data/: update.json
py7zip/: .env  __init__.py
py7zip/examples/: example.py
