[tool.poetry]
name = "dwifte.py"
version = "1.6"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
pyfiglet = "^0.8.post1"
qrcode = "^6.1"
wget = "^3.2"
youtube-dl = "^2020.11.1"
bs4 = "^0.0.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
